stopped abstract close triangle from cutting off by adding padding to entireAbstractBlurb

--- a/mycms/media/readingStyle.css
+++ b/mycms/media/readingStyle.css
@@ -143,6 +143,7 @@ padding-left:22px;
     width: 350px;
     background-color: #F5F9E7;
     padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 #abstractRest{
